--- a/SharePlateCloud/client/index.html
+++ b/SharePlateCloud/client/index.html
@@ -6,7 +6,21 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Adestra banner ad script -->
+    <script type="text/javascript">
+      atOptions = {
+        'key' : '42bfd3f75efbc9a532126d4b824a2be4',
+        'format' : 'iframe',
+        'height' : 300,
+        'width' : 160,
+        'params' : {}
+      };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/42bfd3f75efbc9a532126d4b824a2be4/invoke.js"></script>
+
     <script type="module" src="/src/main.tsx"></script>
+
     <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
     <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
   </body>
